--- a/src/Styles/Landing_page1.css
+++ b/src/Styles/Landing_page1.css
@@ -22,13 +22,12 @@ nav {
 
 }
 
-.LP-navList {
-    /* height: 100%;
-    border: 1px solid black; */
-    list-style: none;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
+
+.LP-navList_Lists {
+  list-style: none;
+  text-decoration: none;
+  border: 1px solid black;
+  background-color: orange;
 }
 .LP-navList-left {
     width: 10%;
