--- a/src/Styles/PackagesPage.css
+++ b/src/Styles/PackagesPage.css
@@ -6,6 +6,7 @@
 }
 
 .packages-page {
+  width: 100%;
   font-family: "Inter", sans-serif;
   background: var(--light-bg);
   color: var(--text);
@@ -29,6 +30,7 @@
   align-items: center;
   gap: 0.4rem;
   cursor: pointer;
+
 }
 
 .nav-links {
@@ -36,6 +38,7 @@
   gap: 1.5rem;
   list-style: none;
   flex-wrap: wrap;
+  list-style: none;
 }
 
 .nav-links li {
@@ -55,6 +58,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-decoration: none;
+  list-style: none;
+}
+
+.nav-links-lists {
+  list-style: none;
+  text-decoration: none;
 }
 
 .btn {
