Add modifications and fixes

--- a/src/Styles/dashboard.css
+++ b/src/Styles/dashboard.css
@@ -21,7 +21,20 @@
 }
 
 .sidebar.closed {
-    transform: translateX(-80%);
+    transform: translateX(-70%);
+}
+
+.toggle-sideBar {
+   
+    width: 40px;
+    height: 35px;
+   
+}
+
+.closetoggle-sideBar {
+    color: #c82333;
+    font-weight: bolder;
+    border: 50px;
 }
 
 .sidebar-header {
