--- a/src/Styles/dashboard1.css
+++ b/src/Styles/dashboard1.css
@@ -1,4 +1,3 @@
-
 .dashboard-page {
   height: 100%;
   width: 100%;
@@ -96,7 +95,9 @@ label {
   margin-bottom: 4px;
 }
 
-input, select, textarea {
+input,
+select,
+textarea {
   border: 1px solid #ccc;
   border-radius: 6px;
   padding: 0.6rem;
