--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -13,8 +14,6 @@ html, body {
   /* border: 4px solid black; */
   overflow-x: hidden;
   width: 100%;
-  
-  
 }
 
 #root {
@@ -26,5 +25,4 @@ html, body {
   width: 95%;
 
   /* border: 1px dashed red; */
-
 }
