--- a/src/Styles/Landing_page.css
+++ b/src/Styles/Landing_page.css
@@ -86,6 +86,12 @@ body {
   width: 100%;
 }
 
+.Logo, .Logo_footer {
+  cursor: pointer;
+  width: 45px;
+  height: 35px;
+}
+
 .brand span {
   color: var(--text-color);
   font-size: 1.25rem;
@@ -678,6 +684,26 @@ body {
   grid-template-columns: 1fr;
 }
 
+.footer-header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+  /* border: 1px solid black; */
+}
+
+.Logo_footer {
+  width: 50px;
+  height: 100%;
+  cursor: none;
+}
+
+/* .footer_Logo_elements {
+  border: 1px solid black;
+  
+} */
+
 .footer-grid strong {
   color: var(--text-color);
   display: block;
@@ -757,6 +783,12 @@ body {
   .footer-grid > div:last-child {
     text-align: right;
   }
+
+    .Logo_footer {
+  width: 50px;
+  height: 50px; 
+}
+
 }
 
 @media (min-width: 1024px) {
@@ -789,4 +821,8 @@ body {
   .lead {
     font-size: 1rem;
   }
+
+   .Logo_footer {
+  width: 50px;
+  height: 50px; }
 }
